--- a/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
@@ -91,6 +91,40 @@
     "<img src=\"https://github.com/user-attachments/assets/e8ff57dc-4839-4800-af99-d79adb7a96ab\" alt=\"Alex #1\" width=\"300\"/>\n",
     "<img src=\"https://github.com/user-attachments/assets/48300776-654d-41ae-b072-c4ffa4afc207\" alt=\"Alex #2\" width=\"300\"/>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## College Board Work\n",
+    "I had an error with college board, so I can't see my score unfortunately.\n",
+    "![BRUH](https://github.com/user-attachments/assets/bacc777a-74e4-4e83-a580-8feefc4a766d)\n",
+    "\n",
+    "I found a work around by going over the test with someone who finished it and could show me the right answers. It looked like I got mostly everything correct, but there was a problem which I recognized I made a mistake on which I included in this [writeup](https://trevorhuang1.github.io/csa_blog/2025/03/04/mcq_frq_writeup_IPYNB_2_.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reflection:\n",
+    "This trimester, I learned both hard and soft skills in my work. Specifically, while I did learn a lot about Java (api, viewController, etc), I learned most about working with others.\n",
+    "\n",
+    "I was the only person in bathroom pass in period 1, so I had to make active efforts to reach out to my teammates whenever I could. I think that my collaboration with Lilian and Matthew was decently frequent but could have still been more often.\n",
+    "\n",
+    "Strengths:\n",
+    "- Working and well integrated project\n",
+    "- Communication (to an extent)\n",
+    "- Learning to work well by myself, since in class I was doing things mostly solo\n",
+    "\n",
+    "Weaknesses:\n",
+    "- Need to talk to my team on a day to day basis\n",
+    "- Over breaks, I could have managed my time better to reduce stress"
+   ]
   }
  ],
  "metadata": {
