--- a/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
+++ b/_notebooks/Foundation/_tangibles/2025-03-02-final_review.ipynb
@@ -86,10 +86,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I met a student named Alex who is a CSSE student with an awesome project!! I really liked the game and found the production quality similar to even CSA gamify projects.\n",
+    "I met a student named Alex who is a CSSE student with an awesome project!! I really liked the game and found the production quality similar to even CSA gamify projects. I gave feedback to him, such as instructions at the start for easy usage.\n",
+    "\n",
+    "I also really liked the national parks project and I gave a lot of feedback on how they could get a lot of parks, such as through an API or webscraper and then storing it into a sqlite database.\n",
     "\n",
     "<img src=\"https://github.com/user-attachments/assets/e8ff57dc-4839-4800-af99-d79adb7a96ab\" alt=\"Alex #1\" width=\"300\"/>\n",
-    "<img src=\"https://github.com/user-attachments/assets/48300776-654d-41ae-b072-c4ffa4afc207\" alt=\"Alex #2\" width=\"300\"/>\n"
+    "<img src=\"https://github.com/user-attachments/assets/48300776-654d-41ae-b072-c4ffa4afc207\" alt=\"Alex #2\" width=\"300\"/>\n",
+    "<img src=\"https://github.com/user-attachments/assets/2ec4148b-ab6a-460d-bcf2-c21a2a75103d\" alt=\"National parks\" width=\"300\"/>\n"
    ]
   },
   {
