severe pmo warning

--- a/_notebooks/Homework/2025-02-20-fibonaccii_abstract.ipynb
+++ b/_notebooks/Homework/2025-02-20-fibonaccii_abstract.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -79,18 +79,18 @@
     "        this.list = new ArrayList<>();\n",
     "        this.hashID = 0;\n",
     "        this.hash = new HashMap<>();\n",
-    "        //initialize fibonacci and time mvc\n",
-    "        this.init();\n",
+    "        //calculate fibonacci and time mvc\n",
+    "        this.calc();\n",
     "    }\n",
     "\n",
     "    /*\n",
     "     This Method should be \"abstract\"\n",
     "     Leave method as protected, as it is only authorized to extender of the class\n",
-    "     Make new class that extends and defines init()\n",
+    "     Make new class that extends and defines calc()\n",
     "     Inside references within this class would change from this to super\n",
     "     Repeat process using for, while, recursion\n",
     "     */\n",
-    "    protected abstract void init();\n",
+    "    protected abstract void calc();\n",
     "\n",
     "    /*\n",
     "     Number is added to fibonacci sequence, current state of \"list\" is added to hash for hashID \"num\"\n",
@@ -118,13 +118,19 @@
     "     Console/Terminal supported print method\n",
     "     */\n",
     "    public void print() {\n",
-    "        System.out.println(\"Init method = \" + this.name);\n",
+    "        System.out.println(\"Calculation method = \" + this.name);\n",
     "        System.out.println(\"fibonacci Number \" + this.size + \" = \" + this.getNth());\n",
     "        System.out.println(\"fibonacci List = \" + this.list);\n",
     "        System.out.println(\"fibonacci Hashmap = \" + this.hash);\n",
     "        for (int i=0 ; i<this.size; i++ ) {\n",
     "            System.out.println(\"fibonacci Sequence \" + (i+1) + \" = \" + this.getNthSeq(i));\n",
     "        }\n",
+    "    }\n",
+    "    public void printClean() {\n",
+    "        long startTime = System.nanoTime();\n",
+    "        System.out.println(\"Calculation method = \" + this.name);\n",
+    "        System.out.println(\"fibonacci Number \" + this.size + \" = \" + this.getNth());\n",
+    "        System.out.println(\"Time taken = \" + (System.nanoTime() - startTime) + \"ms\");\n",
     "    }\n",
     "}"
    ]
@@ -142,31 +148,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Init method = FiboFor extends Fibo\n",
+      "Calculation method = FiboFor extends Fibo\n",
       "fibonacci Number 2 = 1\n",
       "fibonacci List = [0, 1]\n",
       "fibonacci Hashmap = {0=[0], 1=[0, 1]}\n",
       "fibonacci Sequence 1 = [0]\n",
       "fibonacci Sequence 2 = [0, 1]\n",
       "\n",
-      "Init method = FiboFor extends Fibo\n",
-      "fibonacci Number 3 = 1\n",
-      "fibonacci List = [0, 1, 1]\n",
-      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1]}\n",
-      "fibonacci Sequence 1 = [0]\n",
-      "fibonacci Sequence 2 = [0, 1]\n",
-      "fibonacci Sequence 3 = [0, 1, 1]\n",
-      "\n",
-      "Init method = FiboFor extends Fibo\n",
-      "fibonacci Number 4 = 2\n",
-      "fibonacci List = [0, 1, 1, 2]\n",
-      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2]}\n",
-      "fibonacci Sequence 1 = [0]\n",
-      "fibonacci Sequence 2 = [0, 1]\n",
-      "fibonacci Sequence 3 = [0, 1, 1]\n",
-      "fibonacci Sequence 4 = [0, 1, 1, 2]\n",
-      "\n",
-      "Init method = FiboFor extends Fibo\n",
+      "Calculation method = FiboFor extends Fibo\n",
       "fibonacci Number 5 = 3\n",
       "fibonacci List = [0, 1, 1, 2, 3]\n",
       "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2], 4=[0, 1, 1, 2, 3]}\n",
@@ -175,6 +164,19 @@
       "fibonacci Sequence 3 = [0, 1, 1]\n",
       "fibonacci Sequence 4 = [0, 1, 1, 2]\n",
       "fibonacci Sequence 5 = [0, 1, 1, 2, 3]\n",
+      "\n",
+      "Calculation method = FiboFor extends Fibo\n",
+      "fibonacci Number 8 = 13\n",
+      "fibonacci List = [0, 1, 1, 2, 3, 5, 8, 13]\n",
+      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2], 4=[0, 1, 1, 2, 3], 5=[0, 1, 1, 2, 3, 5], 6=[0, 1, 1, 2, 3, 5, 8], 7=[0, 1, 1, 2, 3, 5, 8, 13]}\n",
+      "fibonacci Sequence 1 = [0]\n",
+      "fibonacci Sequence 2 = [0, 1]\n",
+      "fibonacci Sequence 3 = [0, 1, 1]\n",
+      "fibonacci Sequence 4 = [0, 1, 1, 2]\n",
+      "fibonacci Sequence 5 = [0, 1, 1, 2, 3]\n",
+      "fibonacci Sequence 6 = [0, 1, 1, 2, 3, 5]\n",
+      "fibonacci Sequence 7 = [0, 1, 1, 2, 3, 5, 8]\n",
+      "fibonacci Sequence 8 = [0, 1, 1, 2, 3, 5, 8, 13]\n",
       "\n"
      ]
     }
@@ -192,7 +194,7 @@
     "    }\n",
     "\n",
     "    @Override\n",
-    "    protected void init() {\n",
+    "    protected void calc() {\n",
     "        super.name = \"FiboFor extends Fibo\";\n",
     "        long limit = this.size;\n",
     "        // for loops are likely the most common iteration structure, all the looping facts are in one line\n",
@@ -212,7 +214,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "FiboFor.main(2, 3, 4, 5);\n"
+    "FiboFor.main(2, 5, 8);\n"
    ]
   },
   {
@@ -228,10 +230,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Init method = FiboFor extends Fibo\n",
-      "fibonacci Number 7 = 8\n",
-      "fibonacci List = [0, 1, 1, 2, 3, 5, 8]\n",
-      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2], 4=[0, 1, 1, 2, 3], 5=[0, 1, 1, 2, 3, 5], 6=[0, 1, 1, 2, 3, 5, 8]}\n",
+      "Calculation method = FiboFor extends Fibo\n",
+      "fibonacci Number 2 = 1\n",
+      "fibonacci List = [0, 1]\n",
+      "fibonacci Hashmap = {0=[0], 1=[0, 1]}\n",
+      "fibonacci Sequence 1 = [0]\n",
+      "fibonacci Sequence 2 = [0, 1]\n",
+      "\n",
+      "Calculation method = FiboFor extends Fibo\n",
+      "fibonacci Number 5 = 3\n",
+      "fibonacci List = [0, 1, 1, 2, 3]\n",
+      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2], 4=[0, 1, 1, 2, 3]}\n",
+      "fibonacci Sequence 1 = [0]\n",
+      "fibonacci Sequence 2 = [0, 1]\n",
+      "fibonacci Sequence 3 = [0, 1, 1]\n",
+      "fibonacci Sequence 4 = [0, 1, 1, 2]\n",
+      "fibonacci Sequence 5 = [0, 1, 1, 2, 3]\n",
+      "\n",
+      "Calculation method = FiboFor extends Fibo\n",
+      "fibonacci Number 8 = 13\n",
+      "fibonacci List = [0, 1, 1, 2, 3, 5, 8, 13]\n",
+      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2], 4=[0, 1, 1, 2, 3], 5=[0, 1, 1, 2, 3, 5], 6=[0, 1, 1, 2, 3, 5, 8], 7=[0, 1, 1, 2, 3, 5, 8, 13]}\n",
       "fibonacci Sequence 1 = [0]\n",
       "fibonacci Sequence 2 = [0, 1]\n",
       "fibonacci Sequence 3 = [0, 1, 1]\n",
@@ -239,6 +258,7 @@
       "fibonacci Sequence 5 = [0, 1, 1, 2, 3]\n",
       "fibonacci Sequence 6 = [0, 1, 1, 2, 3, 5]\n",
       "fibonacci Sequence 7 = [0, 1, 1, 2, 3, 5, 8]\n",
+      "fibonacci Sequence 8 = [0, 1, 1, 2, 3, 5, 8, 13]\n",
       "\n"
      ]
     }
@@ -255,7 +275,7 @@
     "    }\n",
     "\n",
     "    @Override\n",
-    "    protected void init() {\n",
+    "    protected void calc() {\n",
     "        super.name = \"FiboStream extends Extends\";\n",
     "\n",
     "        // Initial element of stream: new long[]{0, 1}\n",
@@ -277,22 +297,374 @@
     "    }\n",
     "}\n",
     "\n",
-    "FiboStream.main(7);"
+    "FiboStream.main(2, 5, 8);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hacks\n",
+    "## Popcorn Hacks\n",
     "Objectives of these hacks are ...\n",
     "\n",
     "1. Understand how to fullfill abstract class requirements using two additional algoritms.\n",
     "2. Use inheritance style of programming to test speed of each algorithm.  To test the speed, a.) be aware that the first run is always the slowest b.) to time something, my recommendation is 12 runs on the timed element, through out highest and lowest time in calculations.\n",
-    "3. Be sure to make a tester and reporting methods. My desire is to see side-by-side comparisions.\n",
+    "3. Be sure to make a tester and reporting methods.\n",
     "\n",
-    ".85 basis for text based comparison\n",
-    ".90 basis for FE presentation to BE comparison"
+    ".85 basis for text based comparison inside of Jupyter Notebook lesson\n",
+    "\n",
+    "## Hacks\n",
+    "Assign in each Team to build a Thymeleaf UI for portfolio_2025 using this example https://thymeleaf.nighthawkcodingsociety.com/mvc/fibonacci as basis.  Encorporate into Algorithms menu.\n",
+    "\n",
+    "Since there are three teams, one team can do Fibo, others Pali and Factorial.  Assign this to people that are struggling for contribution and presentation to checkpoints.\n",
+    "\n",
+    ".90 basis for FE presentation in Thymmeleaf to BE call in Spring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Popcorn Hacks:\n",
+    "I used the abstract class Fibo to create calculate the fibonacci sequence with both a while loop, matrix exponentiation, and binet's formula (for fun)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculation method = FiboWhile extends Fibo\n",
+      "fibonacci Number 2 = 1\n",
+      "Time taken = 122141ms\n",
+      "\n",
+      "Calculation method = FiboWhile extends Fibo\n",
+      "fibonacci Number 5 = 3\n",
+      "Time taken = 8766ms\n",
+      "\n",
+      "Calculation method = FiboWhile extends Fibo\n",
+      "fibonacci Number 8 = 13\n",
+      "Time taken = 7985ms\n",
+      "\n",
+      "Calculation method = FiboWhile extends Fibo\n",
+      "fibonacci Number 100 = -2437933049959450366\n",
+      "Time taken = 15790ms\n",
+      "\n",
+      "Calculation method = FiboWhile extends Fibo\n",
+      "fibonacci Number 1000 = 8261794739546030242\n",
+      "Time taken = 53402ms\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculation method = FiboWhile extends Fibo\n",
+      "fibonacci Number 10000 = 2788724563990792802\n",
+      "Time taken = 304036ms\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Coded this one mostly myself\n",
+    "// O(n) time complexity\n",
+    "\n",
+    "public class FiboWhile extends Fibo {\n",
+    "\n",
+    "    public FiboWhile() {\n",
+    "        super();\n",
+    "    }\n",
+    "\n",
+    "    public FiboWhile(int nth) {\n",
+    "        super(nth);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    protected void calc() {\n",
+    "        super.name = \"FiboWhile extends Fibo\";\n",
+    "        long limit = this.size;\n",
+    "        long[] f = new long[]{0, 1};\n",
+    "        while (limit-- > 0) {\n",
+    "            this.setData(f[0]);\n",
+    "            f = new long[]{f[1], f[0] + f[1]};\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "    Tester class method.\n",
+    "     */\n",
+    "    static public void main(int... numbers) {\n",
+    "        for (int nth : numbers) {\n",
+    "            Fibo fib = new FiboWhile(nth);\n",
+    "            fib.printClean();\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "FiboWhile.main(2, 5, 8, 100, 1000, 10000);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculation method = FiboMatrix extends Fibo\n",
+      "fibonacci Number 2 = 1\n",
+      "Time taken = 128373ms\n",
+      "\n",
+      "Calculation method = FiboMatrix extends Fibo\n",
+      "fibonacci Number 5 = 3\n",
+      "Time taken = 12624ms\n",
+      "\n",
+      "Calculation method = FiboMatrix extends Fibo\n",
+      "fibonacci Number 8 = 13\n",
+      "Time taken = 8776ms\n",
+      "\n",
+      "Calculation method = FiboMatrix extends Fibo\n",
+      "fibonacci Number 100 = -2437933049959450366\n",
+      "Time taken = 18165ms\n",
+      "\n",
+      "Calculation method = FiboMatrix extends Fibo\n",
+      "fibonacci Number 1000 = 8261794739546030242\n",
+      "Time taken = 52219ms\n",
+      "\n",
+      "Calculation method = FiboMatrix extends Fibo\n",
+      "fibonacci Number 10000 = 2788724563990792802\n",
+      "Time taken = 181143ms\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Used GPT and knowledge of linear algebra/matrix rules to figure out the matrix exponentiation method\n",
+    "// O(log n) time complexity\n",
+    "\n",
+    "import java.util.ArrayList;\n",
+    "import java.util.HashMap;\n",
+    "\n",
+    "public class FiboMatrix extends Fibo {\n",
+    "\n",
+    "    public FiboMatrix() {\n",
+    "        super();\n",
+    "    }\n",
+    "\n",
+    "    public FiboMatrix(int nth) {\n",
+    "        super(nth);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    protected void calc() {\n",
+    "        super.name = \"FiboMatrix extends Fibo\";\n",
+    "        \n",
+    "        // Compute the nth Fibonacci number using matrix exponentiation\n",
+    "        long fibN = matrixFib(this.size);\n",
+    "        \n",
+    "        // Store the result and fill the list with the Fibonacci numbers\n",
+    "        for (int i = 0; i < this.size; i++) {\n",
+    "            this.setData(fib(i));\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     * Matrix exponentiation method to calculate the nth Fibonacci number.\n",
+    "     */\n",
+    "    private long matrixFib(int n) {\n",
+    "        if (n <= 1) {\n",
+    "            return n;\n",
+    "        }\n",
+    "\n",
+    "        long[][] matrix = {{1, 1}, {1, 0}};\n",
+    "        long[][] result = matrixPower(matrix, n - 1);\n",
+    "        return result[0][0];\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     * Matrix multiplication\n",
+    "     */\n",
+    "    private long[][] matrixMultiply(long[][] a, long[][] b) {\n",
+    "        long[][] result = new long[2][2];\n",
+    "        for (int i = 0; i < 2; i++) {\n",
+    "            for (int j = 0; j < 2; j++) {\n",
+    "                result[i][j] = 0;\n",
+    "                for (int k = 0; k < 2; k++) {\n",
+    "                    result[i][j] += a[i][k] * b[k][j];\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        return result;\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     * Matrix exponentiation by squaring\n",
+    "     */\n",
+    "    private long[][] matrixPower(long[][] matrix, int n) {\n",
+    "        long[][] result = {{1, 0}, {0, 1}};  // Identity matrix\n",
+    "        long[][] base = matrix;\n",
+    "\n",
+    "        while (n > 0) {\n",
+    "            if (n % 2 == 1) {\n",
+    "                result = matrixMultiply(result, base);\n",
+    "            }\n",
+    "            base = matrixMultiply(base, base);\n",
+    "            n /= 2;\n",
+    "        }\n",
+    "        return result;\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     * Method to calculate Fibonacci numbers iteratively for filling the list\n",
+    "     */\n",
+    "    private long fib(int n) {\n",
+    "        if (n <= 1) {\n",
+    "            return n;\n",
+    "        }\n",
+    "        long a = 0, b = 1;\n",
+    "        for (int i = 2; i <= n; i++) {\n",
+    "            long temp = a + b;\n",
+    "            a = b;\n",
+    "            b = temp;\n",
+    "        }\n",
+    "        return b;\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     Tester class method\n",
+    "     */\n",
+    "    static public void main(int... numbers) {\n",
+    "        for (int nth : numbers) {\n",
+    "            Fibo fib = new FiboMatrix(nth);\n",
+    "            fib.printClean();\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "FiboMatrix.main(2, 5, 8, 100, 1000, 10000, 100000);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculation method = FiboBinet extends Fibo\n",
+      "fibonacci Number 2 = 1\n",
+      "Time taken = 139785ms\n",
+      "\n",
+      "Calculation method = FiboBinet extends Fibo\n",
+      "fibonacci Number 5 = 3\n",
+      "Time taken = 11592ms\n",
+      "\n",
+      "Calculation method = FiboBinet extends Fibo\n",
+      "fibonacci Number 8 = 13\n",
+      "Time taken = 10990ms\n",
+      "\n",
+      "Calculation method = FiboBinet extends Fibo\n",
+      "fibonacci Number 100 = 9223372036854775807\n",
+      "Time taken = 19277ms\n",
+      "\n",
+      "Calculation method = FiboBinet extends Fibo\n",
+      "fibonacci Number 1000 = 9223372036854775807\n",
+      "Time taken = 67248ms\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculation method = FiboBinet extends Fibo\n",
+      "fibonacci Number 10000 = 9223372036854775807\n",
+      "Time taken = 155575ms\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Very easy, just apply the formula and it is fine\n",
+    "import java.util.ArrayList;\n",
+    "import java.util.HashMap;\n",
+    "\n",
+    "public class FiboBinet extends Fibo {\n",
+    "\n",
+    "    public FiboBinet() {\n",
+    "        super();\n",
+    "    }\n",
+    "\n",
+    "    public FiboBinet(int nth) {\n",
+    "        super(nth);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    protected void calc() {\n",
+    "        super.name = \"FiboBinet extends Fibo\";\n",
+    "\n",
+    "        // Calculate the Fibonacci number using Binet's formula\n",
+    "        for (int i = 0; i < this.size; i++) {\n",
+    "            this.setData(binetFib(i));\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     * Method to calculate Fibonacci number using Binet's formula\n",
+    "     */\n",
+    "    private long binetFib(int n) {\n",
+    "        double phi = (1 + Math.sqrt(5)) / 2;\n",
+    "        double psi = (1 - Math.sqrt(5)) / 2;\n",
+    "\n",
+    "        return Math.round((Math.pow(phi, n) - Math.pow(psi, n)) / Math.sqrt(5));\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     Tester class method\n",
+    "     */\n",
+    "    static public void main(int... numbers) {\n",
+    "        for (int nth : numbers) {\n",
+    "            Fibo fib = new FiboBinet(nth);\n",
+    "            fib.printClean();\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "FiboBinet.main(2, 5, 8, 100, 1000, 10000);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion:\n",
+    "The while loop method is slower than the matrix exponentiation and binet's formula, but not by too much (I think numbers used were a bit small). Surprisingly, binet's formula and matrix exponentiation took nearly the closed to the same time (i reran the cell and it changed) despite being O(1) vs O(n), respectively. \n",
+    "I suspect that the binet's formula fibo is not truly O(1) since it clearly takes more time for smaller ones than others. This is probably because the exponentiation is a O(log(n)) calculation."
    ]
   }
  ],
@@ -308,7 +680,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "17.0.12+0"
+   "version": "17.0.14+7-Ubuntu-122.04.1"
   },
   "orig_nbformat": 4,
   "vscode": {
