--- a/_notebooks/Homework/2025-02-20-fibonaccii_abstract.ipynb
+++ b/_notebooks/Homework/2025-02-20-fibonaccii_abstract.ipynb
@@ -36,8 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "/*\n",
@@ -133,8 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -211,8 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,8 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -328,23 +344,23 @@
      "text": [
       "Calculation method = FiboWhile extends Fibo\n",
       "fibonacci Number 2 = 1\n",
-      "Time taken = 122141ms\n",
+      "Time taken = 303856ms\n",
       "\n",
       "Calculation method = FiboWhile extends Fibo\n",
       "fibonacci Number 5 = 3\n",
-      "Time taken = 8766ms\n",
+      "Time taken = 72207ms\n",
       "\n",
       "Calculation method = FiboWhile extends Fibo\n",
       "fibonacci Number 8 = 13\n",
-      "Time taken = 7985ms\n",
+      "Time taken = 60424ms\n",
       "\n",
       "Calculation method = FiboWhile extends Fibo\n",
       "fibonacci Number 100 = -2437933049959450366\n",
-      "Time taken = 15790ms\n",
+      "Time taken = 89210ms\n",
       "\n",
       "Calculation method = FiboWhile extends Fibo\n",
       "fibonacci Number 1000 = 8261794739546030242\n",
-      "Time taken = 53402ms\n",
+      "Time taken = 151798ms\n",
       "\n"
      ]
     },
@@ -354,7 +370,7 @@
      "text": [
       "Calculation method = FiboWhile extends Fibo\n",
       "fibonacci Number 10000 = 2788724563990792802\n",
-      "Time taken = 304036ms\n",
+      "Time taken = 498585ms\n",
       "\n"
      ]
     }
@@ -401,8 +417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -410,27 +430,27 @@
      "text": [
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 2 = 1\n",
-      "Time taken = 128373ms\n",
+      "Time taken = 342219ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 5 = 3\n",
-      "Time taken = 12624ms\n",
+      "Time taken = 46488ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 8 = 13\n",
-      "Time taken = 8776ms\n",
+      "Time taken = 61647ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 100 = -2437933049959450366\n",
-      "Time taken = 18165ms\n",
+      "Time taken = 151357ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 1000 = 8261794739546030242\n",
-      "Time taken = 52219ms\n",
+      "Time taken = 210219ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 10000 = 2788724563990792802\n",
-      "Time taken = 181143ms\n",
+      "Time taken = 296181ms\n",
       "\n"
      ]
     }
@@ -473,7 +493,7 @@
     "            return n;\n",
     "        }\n",
     "\n",
-    "        long[][] matrix = {{1, 1}, {1, 0}};\n",
+    "        long[][] matrix = new long[][] {{1, 1}, {1, 0}}; // Fix escaping issue\n",
     "        long[][] result = matrixPower(matrix, n - 1);\n",
     "        return result[0][0];\n",
     "    }\n",
@@ -498,7 +518,7 @@
     "     * Matrix exponentiation by squaring\n",
     "     */\n",
     "    private long[][] matrixPower(long[][] matrix, int n) {\n",
-    "        long[][] result = {{1, 0}, {0, 1}};  // Identity matrix\n",
+    "        long[][] result = new long[][] {{1, 0}, {0, 1}};  // Identity matrix\n",
     "        long[][] base = matrix;\n",
     "\n",
     "        while (n > 0) {\n",
@@ -539,13 +559,17 @@
     "    }\n",
     "}\n",
     "\n",
-    "FiboMatrix.main(2, 5, 8, 100, 1000, 10000, 100000);\n"
+    "FiboMatrix.main(2, 5, 8, 100, 1000, 10000);\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -553,33 +577,27 @@
      "text": [
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 2 = 1\n",
-      "Time taken = 139785ms\n",
+      "Time taken = 287254ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 5 = 3\n",
-      "Time taken = 11592ms\n",
+      "Time taken = 32001ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 8 = 13\n",
-      "Time taken = 10990ms\n",
+      "Time taken = 26420ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 100 = 9223372036854775807\n",
-      "Time taken = 19277ms\n",
+      "Time taken = 50235ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 1000 = 9223372036854775807\n",
-      "Time taken = 67248ms\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Time taken = 109387ms\n",
+      "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 10000 = 9223372036854775807\n",
-      "Time taken = 155575ms\n",
+      "Time taken = 286733ms\n",
       "\n"
      ]
     }
@@ -654,7 +672,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.14+7-Ubuntu-122.04.1"
   },
