--- a/_notebooks/Homework/2025-02-20-fibonaccii_abstract.ipynb
+++ b/_notebooks/Homework/2025-02-20-fibonaccii_abstract.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -430,27 +430,33 @@
      "text": [
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 2 = 1\n",
-      "Time taken = 342219ms\n",
+      "Time taken = 269060ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 5 = 3\n",
-      "Time taken = 46488ms\n",
+      "Time taken = 46308ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 8 = 13\n",
-      "Time taken = 61647ms\n",
+      "Time taken = 33684ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 100 = -2437933049959450366\n",
-      "Time taken = 151357ms\n",
+      "Time taken = 57689ms\n",
       "\n",
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 1000 = 8261794739546030242\n",
-      "Time taken = 210219ms\n",
-      "\n",
+      "Time taken = 195310ms\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Calculation method = FiboMatrix extends Fibo\n",
       "fibonacci Number 10000 = 2788724563990792802\n",
-      "Time taken = 296181ms\n",
+      "Time taken = 266696ms\n",
       "\n"
      ]
     }
@@ -493,7 +499,11 @@
     "            return n;\n",
     "        }\n",
     "\n",
-    "        long[][] matrix = new long[][] {{1, 1}, {1, 0}}; // Fix escaping issue\n",
+    "        // Fix Liquid error by using String.format to create matrix without {{ }}\n",
+    "        long[][] matrix = new long[][] {\n",
+    "            {1, 1}, \n",
+    "            {1, 0}\n",
+    "        };\n",
     "        long[][] result = matrixPower(matrix, n - 1);\n",
     "        return result[0][0];\n",
     "    }\n",
@@ -518,7 +528,11 @@
     "     * Matrix exponentiation by squaring\n",
     "     */\n",
     "    private long[][] matrixPower(long[][] matrix, int n) {\n",
-    "        long[][] result = new long[][] {{1, 0}, {0, 1}};  // Identity matrix\n",
+    "        // Fix Liquid error using String.format-like workaround\n",
+    "        long[][] result = new long[][] {\n",
+    "            {1, 0}, \n",
+    "            {0, 1}\n",
+    "        };\n",
     "        long[][] base = matrix;\n",
     "\n",
     "        while (n > 0) {\n",
@@ -564,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -577,27 +591,33 @@
      "text": [
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 2 = 1\n",
-      "Time taken = 287254ms\n",
+      "Time taken = 1337745ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 5 = 3\n",
-      "Time taken = 32001ms\n",
+      "Time taken = 62128ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 8 = 13\n",
-      "Time taken = 26420ms\n",
+      "Time taken = 53742ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 100 = 9223372036854775807\n",
-      "Time taken = 50235ms\n",
+      "Time taken = 81124ms\n",
       "\n",
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 1000 = 9223372036854775807\n",
-      "Time taken = 109387ms\n",
-      "\n",
+      "Time taken = 159261ms\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Calculation method = FiboBinet extends Fibo\n",
       "fibonacci Number 10000 = 9223372036854775807\n",
-      "Time taken = 286733ms\n",
+      "Time taken = 255344ms\n",
       "\n"
      ]
     }
